<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuLlamada"
    android:orientation="vertical"
    android:paddingTop="80dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:gravity="center"
        ></TextView>

    <Button
        android:id="@+id/btnBomberos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/bomberos"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ibomberos"
        android:layout_marginTop="60sp"/>
    <Button
        android:id="@+id/btnPolicia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/policia"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ipolicia"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnAmbulancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/ambulancia"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/iambulancia"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnCruzRoja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/cruz"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/icruzroja"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnSerenazgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/serenazgo"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/iserenazgo"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnDesastres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/desastres"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/idesastres"
        android:layout_marginTop="2sp"/>
</LinearLayout>