<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuOpciones"
    android:orientation="vertical"
    android:paddingTop="80dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:gravity="center"
        ></TextView>

    <Button
        android:id="@+id/btnReportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/reportar"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ireporte"
        android:layout_marginTop="60sp"/>
    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/llamar"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/illamar"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnAlertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/alerta"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ialerta"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnInforme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/informe"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/iinforme"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnPreguntas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/preguntas"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ipreguntas"
        android:layout_marginTop="2sp"/>
    <Button
        android:id="@+id/btnRecomendaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/opciones"
        android:text="@string/recomendaciones"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/irecoomendaciones"
        android:layout_marginTop="2sp"/>
    <Button
        android:layout_marginTop="10sp"
        android:id="@+id/btnRegresarLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="REGRESAR"
        android:backgroundTint="#CB003F"
        android:layout_gravity="right"/>
</LinearLayout>