<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reporte"
    android:orientation="vertical"
    android:paddingTop="80dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte"
        android:gravity="center"
        ></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:layout_marginTop="60sp"
            android:id="@+id/edtnombre"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:hint="@string/nombre"
            android:padding="15dp"/>
        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/edtpellidos"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:hint="@string/apellido"
            android:padding="15dp"/>
        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/edttelefono"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:hint="@string/telefono"
            android:padding="15dp"/>
        <EditText
            android:layout_marginTop="10sp"
            android:id="@+id/edtdescripcion"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:hint="@string/descripcion"
            android:padding="15dp"/>
        <Button
            android:id="@+id/btnRegistrarUbicacion"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/btnubi"
            android:textColor="#ffffff"
            android:layout_margin="10dp"
            android:backgroundTint="#CB003F"
            android:layout_gravity="center"
            ></Button>
        <TextView
            android:layout_marginTop="10sp"
            android:id="@+id/txtLat"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:padding="15dp"/>
        <TextView
            android:layout_marginTop="10sp"
            android:id="@+id/txtLong"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:padding="15dp"/>
        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/btnaceptar"
            android:textColor="#ffffff"
            android:backgroundTint="#CB003F"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            ></Button>
    </LinearLayout>
</LinearLayout>