<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iu"></ImageView>

        <EditText
            android:id="@+id/email"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="15dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic"></ImageView>
        <EditText
            android:id="@+id/password"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"/>
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:visibility="gone"></ProgressBar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="25dp">

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/btnIniciar"
            android:backgroundTint="#CB003F"
            android:layout_margin="5sp"
            />
        <Button
            android:id="@+id/btnRegistrarLog"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/btnRegistrar"
            android:backgroundTint="#CB003F"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/txtinvitado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invitado"
        android:textColor="@color/azul"
        android:gravity="center"></TextView>

</LinearLayout>